Alignment fix attempt 5

--- a/app/style.css
+++ b/app/style.css
@@ -78,7 +78,7 @@ body::before {
 }
 
 .choices {
-    height: 140px;
+    height: 100px;
     display: flex;
     justify-content: center;
     gap: 1%;
